html/style/default.css
@keyframes load-in{
	0%{transform:translateX(-50%) skew(0deg)}
	50%{width:0%;transform:translateX(-50%) skew(var(--skewr))}
	100%{width:var(--content-width)}
}
/* body */
body{
	/*	color legend:
		
		--colorname_modifier
		the modifier can be hh, h, not present, d or dd
		h is hell (german for light)
		d is dark
		double them up and it's even more light / dark
		
		in widgets, h is hover and f is focused. there, color names are usually
		txt for text, brd for border and bgc for background color
	 */
	/*accent colors*/
	--acc_hh:var(--brn_hh);/*#AFF;*/
	--acc_h:var(--brn_h);/*#8CC;*/
	--acc:var(--brn);/*#6AA;*/
	--acc_d:var(--brn_d);/*#244;*/
	--acc_dd:var(--brn_dd);/*#122;*/
	/*brown colors*/
	--brn_hh:#F6D3AD;
	--brn_h:#D3B089;
	--brn:#AE895F;
	--brn_d:#6F5230;
	--brn_dd:#493621;
	/*grey colors*/
	--gry_h:#E0E0E0;
	--gry:#BCBCBC;
	--gry_d:#888;
	--gry_dd:#595959;
	/*link colors*/
	--lnk_h:#6AC;
	--lnk:#418BA4;
	/*for loadin/out animation*/
	--content-width:100vw;
	--skewr:0deg;
	color:var(--acc);
	background-color:var(--acc_dd);
	font-family:Tahoma, Arial, sans-serif;
	padding:0.5em;
	margin:0 0 1em 0;
}
/*different accent colors*/
.type_RRemix{
	--acc_hh:#FD0;
	--acc_h:#D5C500;
	--acc:#AA9000;
	--acc_d:#7A6300;
	--acc_dd:#540;
}
.type_RRequested{
	--acc_hh:#FF8800;
	--acc_h:#D06800;
	--acc:#A50;
	--acc_d:#6E3815;
	--acc_dd:#531;
}
.type_Original{
	--acc_hh:#5F5;
	--acc_h:#4C4;
	--acc:#393;
	--acc_d:#262;
	--acc_dd:#131;
}
.type_Commission{
	--acc_hh:#C6F;
	--acc_h:#A5F;
	--acc:#639;
	--acc_d:#3C1C5C;
	--acc_dd:#251436;
}
/* scrollbar */
body{/*doesn't work with newest firefox since they introduced those new scrollbars*/
	scrollbar-width:auto;
	scrollbar-color:var(--gry_d) var(--gry);
}
*::-webkit-scrollbar{
	width:0.75em;
	height:0.75em;
}
*::-webkit-scrollbar-track-piece{
	background-color:var(--gry);
}
*::-webkit-scrollbar-thumb{
	background-color:var(--gry_d);
	border:solid 0.125em var(--gry);
	border-radius:0.5em;
}
::-webkit-scrollbar-thumb:hover{
	background-color:var(--gry_dd)
}
/* text selections */
::selection{
	color:var(--acc_d);
	background-color:var(--acc_h);
}
/* text stuff */
h1{
	text-align:center;
	font-variant-caps:small-caps;
}
h1,h2,h3,h4{
	color:var(--acc_h);
}
fieldset{
	border-color:var(--acc);
	border-style:groove;
	border-width:2px;
	border-right:none;
	border-bottom:none;
	margin:2px 0;
}
fieldset>legend{
	float:left;
	width:100%;
}
legend>:is(h2,h3,h4){
	margin-top:0.25em;
}
a{
	color:var(--lnk);
}
a:hover{
	color:var(--lnk_h);
}
/* navbar */
#main_nav{
	display:flex;
	position:sticky;
	top:0;
	background:
		linear-gradient(to right,var(--gry) 2em,var(--gry_d) 50%) padding-box,
		linear-gradient(to right,var(--brn_d) calc(2em + 1px),var(--gry_d) 2em,var(--gry) 50%) border-box;
	border-radius:0 0 0.25em 0.25em;
	overflow:clip;
	width:calc(100% + 1em - 2px);
	margin:-0.5em -0.5em 0.5em -0.5em;
	border:solid 1px #0000;
	border-top:none;
	z-index:1;
}
#main_nav>.btn{
	--txt:var(--gry_h);
	--txt_h:var(--gry_dd);
	--brd:var(--gry);
	--brd_h:var(--gry);
	--bgc:var(--gry_d);
	--bgc_h:var(--gry);
	border-radius:0;
	margin:0;
	border-left:solid 1px var(--brd);
}
#main_nav>.btn:hover{
	z-index:1;
}
#main_nav>#logo{
	height:2em;
	margin-right:auto;
}
/* footer */
footer{
	position:fixed;
	bottom:0;
	left:0;
	background-color:var(--acc_d);
	color:var(--acc_h);
	padding:0.15em 0.25em;
	border-radius:0 0.25em 0 0;
	--lnk:var(--acc_h);
	--lnk_h:var(--acc_hh)
}
/* buttons */
.btn{
	display:inline-flex;
	align-items:center;
	vertical-align:middle;
	--txt:var(--acc_h);
	--txt_h:var(--acc_dd);
	--bgc:var(--acc_d);
	--bgc_h:var(--acc);
	border:none;
	color:var(--txt);
	background-color:var(--bgc);
	text-decoration:none;
	padding:0 0.6em;
	margin:0.1em 0;
	line-height:2em;
	border-radius:0.25em;
	user-select:none;
}
a.btn{
	cursor:pointer;
}
button.btn{
	cursor:pointer;
	box-sizing:content-box;/*why tf*/
	font-size:inherit;/*WHY THE FUCK, DO YOU KNOW HOW LONG IT TOOK ME TO FIND THIS???*/
}
a.btn:hover,
button.btn:hover{
	color:var(--txt_h);
	background-color:var(--bgc_h);
}
/* play buttons for masterplayer */
.btn.play,
.btn.dl{
	height:2em;
	width:1em;
	padding:0 0.5em;
	margin:0;
	cursor:pointer;
}
.btn.play>svg>path{
	transition:d 0.25s;
}
/* heterogenous bilateral button */
.hebi{
	padding-left:0;
	overflow:clip;
}
.hebi>:first-child{
	display:inline-flex;
	height:2em;
	align-self:center;
	justify-content:center;
	margin-right:0.6em;
	background-color:var(--acc);
	color:var(--acc_d)
}
.hebi>:first-child:not(img){
	width:2em;
}
a.hebi:hover>div{
	background-color:var(--acc_hh)
}
a.hebi:hover>img{
	filter:brightness(1.2);
}
/* overlay */
#overlay{
	position:fixed;
	top:2em;
	left:50%;
	display:flex;
	flex-direction:column;
	transform:translateX(-50%) skew(var(--skewr));
	height:calc(100% - 2em);
	pointer-events:none;
	border-left:solid 50vw var(--brn);
	border-right:solid 50vw var(--gry);
	animation:load-in 0.5s normal both cubic-bezier(.76,.07,0,1);
	animation-iteration-count:1;
}
/*audioplayer*/
#masterplayer{
	display:inline-flex;
	position:sticky;
	top:2.5em;
	left:0.5em;
	border-radius:0.25em;
	padding-right:0.25em;
	background-color:var(--bg);
	border:solid 1px var(--acc_dd);
	height:2em;
	align-items:center;
	vertical-align:middle;/*self align in inline*/
	--fg:var(--acc_h);
	--bg:var(--acc_d);
	--fg_h:var(--acc_dd);
	--bg_h:var(--acc);
}
#masterplayer[disabled]{
	--fg:var(--acc);
}
#masterplayer[disabled]>:is(div,svg){
	cursor:not-allowed;
}
#masterplayer>svg{
	height:2em;
	width:1em;
	flex-shrink:0;
	flex-grow:0;
	padding:0 0.5em;
	color:var(--fg);
	background-color:var(--bg);
	border-radius:0.25em;
	cursor:pointer;
}
#masterplayer>svg>path{
	transition:d 0.25s;
}
#masterplayer:not([disabled])>svg:hover{
	color:var(--acc_dd);
	background-color:var(--acc);
}
#masterplayer>span{
	margin:0 0.5em 0 0em;
	white-space:pre;
	flex-shrink:0;
	flex-grow:0;
	color:var(--fg);
	font-family:monospace;
	font-weight:bold;
}
#audioprog,
#audiovol{
	border:solid 1px var(--fg);
	height:0.5em;
	margin:0 0.25em;
	padding:0.25em;
	border-radius:0.25em;
	cursor:pointer;
}
#audioprog>div,
#audiovol>div{
	height:100%;
	width:100%;
	border-radius:0.1em;
}
#audioprog{width:8em}
#audioprog>div{background-image:none}
#audiovol{width:3em}
#audiovol>div{background-image:linear-gradient(var(--fg),var(--fg))}

